--- a/_config.yml
+++ b/_config.yml
@@ -13,15 +13,15 @@ permalink: /blog/:year/:title/
 paginate_path: /blog/page:num/
 
 # Social media links in footer
-twitter: "#"
-linkedin: "https://www.linkedin.com/in/april-johnson-b3018230/"
-stackoverflow: "#"
-github: "#"
-researchgate: "#"
-orcid: "#"
-quora: "#"
-instagram: "#"
-facebook: "#"
+#twitter: "#"
+linkedin: "april-johnson-b3018230/"
+#stackoverflow: "#"
+#github: "#"
+#researchgate: "#"
+#orcid: "#"
+#quora: "#"
+#instagram: "#"
+#facebook: "#"
 
 
 # Markdown
